--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -1,15 +1,73 @@
 html {
-    font-size: 100%;
-    box-sizing: border-box;
+  font-size: 100%;
+  box-sizing: border-box;
 }
 
 *, *::before, *::after {
-    box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 body {
-    font-family: 'Open Sans', sans-serif; 
-    line-height: 1.5;
-    margin: 0;
-    padding: 0;
+  font-family: $font;
+  font-size: $font-medium;
+  color: $grayishBlue; 
+  line-height: 1.4;
+  margin: 0;
+  padding: 0;
+}
+
+a, a:visited, a:hover {
+  text-decoration: none;
+  color: $darkBlue;
+}
+
+// Flexbox
+.flex {
+  display: flex;
+
+  &-jc-sb {
+    justify-content: space-between;
+  }
+
+  &-jc-c {
+    justify-content: center;
+  }
+
+  &-ai-c {
+    align-items: center;
+  }
+
+}
+
+// Button
+button, .button {
+  display: inline-block;
+  padding: 1rem 1.875rem;
+  border-radius: 50px;
+
+  cursor: pointer;
+  font-size: $font-small;
+  font-weight: 700;
+
+  color: $white;
+  background: linear-gradient(
+    to right, $limeGreen, $brightCyan );
+  
+  border: none;
+  
+}
+
+// Visibility
+.hide-for-mobile {
+  // hide for tablet and down
+  @include breakpoint-down('md') {
+    display: none;
+  }
+}
+
+.hide-for-desktop {
+  // hide for desktop viewport widths
+  @include breakpoint-up('lg') {
+    display: none;
+  }
 }
