--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -1,27 +1,41 @@
-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1rem;
-}
+.header {
+  nav {
+    padding: 24px;
+  }
 
-.logo img {
-  height: 2rem;
-}
+  &__logo {
 
-.hamburger-menu {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 1.5rem;
-  height: 1.5rem;
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-}
+    img {
+      width: 100%;
+      height: auto;
+    }
 
-.hamburger-menu__line {
-  width: 100%;
-  height: 2px;
-  background-color: #000;
+  }
+
+  &__menu {  // Mobile Menu
+
+    > span {
+      display: block;
+      width: 26px;
+      height: 2px;
+      background-color: $darkBlue;
+
+      &:not(:last-child) {
+        margin-bottom: 3px;
+      }
+    }
+  }
+
+  &__links {  // Nav Links
+      
+    a {
+      font-size: $font-small;
+      color: $darkBlue;
+    }
+  }
+
+  &__cta {  // Call to Action Button
+
+    font-size: $font-small;
+  }
 }
