--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -1,6 +1,6 @@
 .header {
   nav {
-    padding: 24px;
+    padding: 1.0625rem 1.5rem;
   }
 
   &__logo {
@@ -30,10 +30,34 @@
       
     a {
       font-size: $font-small;
-      color: $darkBlue;
+      color: $grayishBlue;
+      transition: color 0.7s ease-in-out;
+      position: relative;
 
       &:not(:last-child) {
         margin-right: 2rem;
+      }
+
+      &::before {
+        content: "";
+        position: absolute;
+        display: block;
+        height: 5px;
+        left: 0;
+        right: 0;
+        bottom: -30px;
+        background: linear-gradient(
+            to right, $limeGreen, $brightCyan );
+        opacity: 0;
+        transition: opacity 0.7s ease-in-out;
+      }
+
+      &:hover {
+        color: $darkBlue;
+
+        &::before {
+          opacity: 1;
+        }
       }
     }
   }
