--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -35,7 +35,6 @@ body {
 
 a, a:visited, a:hover {
   text-decoration: none;
-  color: hsl(233, 8%, 62%);
 }
 
 h1 {
@@ -80,7 +79,7 @@ button, .button {
 }
 
 .header nav {
-  padding: 24px;
+  padding: 1.0625rem 1.5rem;
 }
 .header__logo img {
   width: 8.875rem;
@@ -97,10 +96,30 @@ button, .button {
 }
 .header__links a {
   font-size: 0.875rem;
-  color: hsl(233, 26%, 24%);
+  color: hsl(233, 8%, 62%);
+  transition: color 0.7s ease-in-out;
+  position: relative;
 }
 .header__links a:not(:last-child) {
   margin-right: 2rem;
+}
+.header__links a::before {
+  content: "";
+  position: absolute;
+  display: block;
+  height: 5px;
+  left: 0;
+  right: 0;
+  bottom: -30px;
+  background: linear-gradient(to right, hsl(136, 65%, 51%), hsl(192, 70%, 51%));
+  opacity: 0;
+  transition: opacity 0.7s ease-in-out;
+}
+.header__links a:hover {
+  color: hsl(233, 26%, 24%);
+}
+.header__links a:hover::before {
+  opacity: 1;
 }
 .header__cta {
   font-size: 0.875rem;
