--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -123,4 +123,9 @@ button, .button {
 }
 .header__cta {
   font-size: 0.875rem;
+  color: hsl(0, 0%, 100%);
+  transition: opacity 0.7s ease-in-out;
+}
+.header__cta:hover {
+  opacity: 0.7;
 }/*# sourceMappingURL=style.css.map */
