--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -90,9 +90,20 @@ button, .button {
   width: 26px;
   height: 2px;
   background-color: hsl(233, 26%, 24%);
+  transition: all 0.7s ease-in-out;
+  transform-origin: 3px 1px;
 }
 .header__menu > span:not(:last-child) {
-  margin-bottom: 3px;
+  margin-bottom: 5px;
+}
+.header__menu.open > span:first-child {
+  transform: rotate(45deg);
+}
+.header__menu.open > span:nth-child(2) {
+  opacity: 0;
+}
+.header__menu.open > span:last-child {
+  transform: rotate(-45deg);
 }
 .header__links a {
   font-size: 0.875rem;
