--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -1,4 +1,42 @@
 .header {
+  // Hamburger Open Styles
+  &.open {  // This class is toggled by javascript in sg.js
+
+    .header__menu {
+      > span:first-child {
+        transform: rotate(45deg);
+      }
+
+      > span:nth-child(2) {
+        opacity: 0;
+      }
+
+      > span:last-child {
+        transform: rotate(-45deg);
+      }
+    }
+  }
+
+  .overlay {
+    position: fixed;
+    top: 3.75rem;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+
+    background: linear-gradient(
+        $darkBlue, transparent );
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.7s, visibility 0s 0.7s;
+
+    &.open {
+      opacity: 0.9;
+      visibility: visible;
+      transition: opacity 0.7s;
+    }
+  }
+
   nav {
     padding: 1.0625rem 1.5rem;
   }
@@ -27,19 +65,7 @@
       }
     }
 
-    &.open {
-      > span:first-child {
-        transform: rotate(45deg);
-      }
-
-      > span:nth-child(2) {
-        opacity: 0;
-      }
-
-      > span:last-child {
-        transform: rotate(-45deg);
-      }
-    }
+    
   }
 
   &__links {  // Nav Links
