--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -78,6 +78,31 @@ button, .button {
   }
 }
 
+.header.open .header__menu > span:first-child {
+  transform: rotate(45deg);
+}
+.header.open .header__menu > span:nth-child(2) {
+  opacity: 0;
+}
+.header.open .header__menu > span:last-child {
+  transform: rotate(-45deg);
+}
+.header .overlay {
+  position: fixed;
+  top: 3.75rem;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(hsl(233, 26%, 24%), transparent);
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.7s, visibility 0s 0.7s;
+}
+.header .overlay.open {
+  opacity: 0.9;
+  visibility: visible;
+  transition: opacity 0.7s;
+}
 .header nav {
   padding: 1.0625rem 1.5rem;
 }
@@ -95,15 +120,6 @@ button, .button {
 }
 .header__menu > span:not(:last-child) {
   margin-bottom: 5px;
-}
-.header__menu.open > span:first-child {
-  transform: rotate(45deg);
-}
-.header__menu.open > span:nth-child(2) {
-  opacity: 0;
-}
-.header__menu.open > span:last-child {
-  transform: rotate(-45deg);
 }
 .header__links a {
   font-size: 0.875rem;
