--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -2,6 +2,10 @@
   // Hamburger Open Styles
   &.open {  // This class is toggled by javascript in sg.js
 
+    .overlay {
+      animation: fade-in 700ms ease-in-out forwards;
+    }
+
     .header__menu {
       > span:first-child {
         transform: rotate(45deg);
@@ -27,14 +31,8 @@
     background: linear-gradient(
         $darkBlue, transparent );
     opacity: 0;
-    visibility: hidden;
     transition: opacity 0.7s, visibility 0s 0.7s;
 
-    &.open {
-      opacity: 0.9;
-      visibility: visible;
-      transition: opacity 0.7s;
-    }
   }
 
   nav {
