--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -15,6 +15,30 @@
 - White: hsl(0, 0%, 100%)
 
 */
+@keyframes fade-in {
+  0% {
+    display: none;
+    opacity: 0;
+  }
+  1% {
+    display: block;
+    opacity: 0;
+  }
+  100% {
+    display: block;
+    opacity: 1;
+  }
+}
+@keyframes fade-out {
+  0% {
+    display: block;
+    opacity: 1;
+  }
+  100% {
+    display: none;
+    opacity: 0;
+  }
+}
 html {
   font-size: 100%;
   box-sizing: border-box;
@@ -78,6 +102,9 @@ button, .button {
   }
 }
 
+.header.open .overlay {
+  animation: fade-in 700ms ease-in-out forwards;
+}
 .header.open .header__menu > span:first-child {
   transform: rotate(45deg);
 }
@@ -95,13 +122,7 @@ button, .button {
   height: 100vh;
   background: linear-gradient(hsl(233, 26%, 24%), transparent);
   opacity: 0;
-  visibility: hidden;
   transition: opacity 0.7s, visibility 0s 0.7s;
-}
-.header .overlay.open {
-  opacity: 0.9;
-  visibility: visible;
-  transition: opacity 0.7s;
 }
 .header nav {
   padding: 1.0625rem 1.5rem;
