--- a/app/scss/_animations.scss
+++ b/app/scss/_animations.scss
@@ -1,25 +1,29 @@
 @keyframes fade-in {
   0% {
-    display: none;
     opacity: 0;
-  }
-  1% {
-    display: block;
-    opacity: 0;
+    visibility: hidden;
   }
   100% {
-    display: block;
     opacity: 1;
+    visibility: visible;
   }
+}
+
+.fade-in {
+  animation: fade-in 700ms ease-in-out forwards;
 }
   
 @keyframes fade-out {
   0% {
-    display: block;
     opacity: 1;
+    visibility: visible;
   }
   100% {
-    display: none;
     opacity: 0;
+    visibility: hidden;
   }
+}
+
+.fade-out {
+  animation: fade-out 700ms ease-in-out forwards;
 }
