--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -2,10 +2,6 @@
   // Hamburger Open Styles
   &.open {  // This class is toggled by javascript in sg.js
 
-    .overlay {
-      animation: fade-in 700ms ease-in-out forwards;
-    }
-
     .header__menu {
       > span:first-child {
         transform: rotate(45deg);
@@ -27,11 +23,11 @@
     left: 0;
     width: 100%;
     height: 100vh;
+    visibility: hidden;
+    opacity: 0;
 
     background: linear-gradient(
         $darkBlue, transparent );
-    opacity: 0;
-    transition: opacity 0.7s, visibility 0s 0.7s;
 
   }
 
