--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -17,28 +17,32 @@
 */
 @keyframes fade-in {
   0% {
-    display: none;
     opacity: 0;
-  }
-  1% {
-    display: block;
-    opacity: 0;
+    visibility: hidden;
   }
   100% {
-    display: block;
     opacity: 1;
+    visibility: visible;
   }
 }
+.fade-in {
+  animation: fade-in 700ms ease-in-out forwards;
+}
+
 @keyframes fade-out {
   0% {
-    display: block;
     opacity: 1;
+    visibility: visible;
   }
   100% {
-    display: none;
     opacity: 0;
+    visibility: hidden;
   }
 }
+.fade-out {
+  animation: fade-out 700ms ease-in-out forwards;
+}
+
 html {
   font-size: 100%;
   box-sizing: border-box;
@@ -102,9 +106,6 @@ button, .button {
   }
 }
 
-.header.open .overlay {
-  animation: fade-in 700ms ease-in-out forwards;
-}
 .header.open .header__menu > span:first-child {
   transform: rotate(45deg);
 }
@@ -120,9 +121,9 @@ button, .button {
   left: 0;
   width: 100%;
   height: 100vh;
-  background: linear-gradient(hsl(233, 26%, 24%), transparent);
+  visibility: hidden;
   opacity: 0;
-  transition: opacity 0.7s, visibility 0s 0.7s;
+  background: linear-gradient(hsl(233, 26%, 24%), transparent);
 }
 .header nav {
   padding: 1.0625rem 1.5rem;
