--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -20,6 +20,12 @@ a, a:visited, a:hover {
   text-decoration: none;
 }
 
+// Spacing
+.container {
+  padding-right: 1.5rem;
+  padding-left: 1.5rem;
+}
+
 h1 {
   color: $darkBlue;
 }
