--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -2,7 +2,7 @@
   // Hamburger Open Styles
   &.open {  // This class is toggled by javascript in sg.js
 
-    .header__menu {
+    .header__toggle {
       > span:first-child {
         transform: rotate(45deg);
       }
@@ -32,10 +32,11 @@
   }
 
   nav {
-    padding: 1.0625rem 1.5rem;
+    padding-top: 1.0625rem;
+    padding-bottom: 1.0625rem;
   }
 
-  &__logo {
+  &__logo { // Top Left Logo
 
     img {
       width: 8.875rem;
@@ -44,7 +45,7 @@
 
   }
 
-  &__menu {  // Mobile Menu
+  &__toggle {  // Mobile Hamburger Toggle
 
     > span {
       display: block;
@@ -62,7 +63,22 @@
     
   }
 
-  &__links {  // Nav Links
+  &__mobile-menu { // White Mobile Menu
+    background: $white;
+    margin: 1.5rem 1.5rem;
+    padding: 1.625rem 0;
+    border-radius: 0.25rem;
+    position: relative;
+
+    a {
+      color: $darkBlue;
+      padding: 0.625rem;
+      display: block;
+      text-align: center;
+    }
+  }
+
+  &__links {  // Desktop Nav Links
       
     a {
       font-size: $font-small;
