--- a/app/scss/_animations.scss
+++ b/app/scss/_animations.scss
@@ -1,3 +1,9 @@
+.has-fade {
+  visibility: hidden;
+  //opacity: 0;
+  //transition: opacity 700ms ease-in-out;
+}
+
 @keyframes fade-in {
   0% {
     opacity: 0;
