--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -14,6 +14,11 @@ body {
   line-height: 1.4;
   margin: 0;
   padding: 0;
+
+  &.noscroll {
+    overflow: hidden;
+  }
+
 }
 
 a, a:visited, a:hover {
