--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -64,6 +64,9 @@ body {
   margin: 0;
   padding: 0;
 }
+body.noscroll {
+  overflow: hidden;
+}
 
 a, a:visited, a:hover {
   text-decoration: none;
