--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -77,7 +77,7 @@ a, a:visited, a:hover {
   padding-left: 1.5rem;
 }
 
-h1 {
+h1, h2, h3 {
   color: hsl(233, 26%, 24%);
 }
 
@@ -203,4 +203,13 @@ button, .button {
 }
 .header__cta:hover {
   opacity: 0.7;
+}
+
+.hero__image {
+  background-image: url("/images/bg-intro-mobile.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  position: absolute;
+  z-index: 3;
 }/*# sourceMappingURL=style.css.map */
