--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -138,6 +138,8 @@ button, .button {
   background: linear-gradient(hsl(233, 26%, 24%), transparent);
 }
 .header nav {
+  position: relative;
+  background-color: hsl(0, 0%, 100%);
   padding-top: 1.0625rem;
   padding-bottom: 1.0625rem;
 }
