hero background image started

--- a/app/scss/_hero.scss
+++ b/app/scss/_hero.scss
@@ -4,9 +4,8 @@
       background-image: url('/images/bg-intro-mobile.svg');
       background-repeat: no-repeat;
       background-size: cover;
-      background-position: center;
-      position: absolute;
-      z-index: 3;
+      background-position: center center;
+      height: 280px;
     }
 
     &__text {
