--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -212,7 +212,6 @@ button, .button {
   background-image: url("/images/bg-intro-mobile.svg");
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center;
-  position: absolute;
-  z-index: 3;
+  background-position: center center;
+  height: 280px;
 }/*# sourceMappingURL=style.css.map */
